MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Allocation__c/Booking_Fee_Allocation__c.object-meta.xml
<CustomObject>
    <label>Booking Fee Allocation</label>
    <nameField>
        <displayFormat>BFLA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Fee Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>