MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Allocation__c/fields/Booking_Fee_Line__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Line__c</fullName>
    <label>Booking Fee Line</label>
    <referenceTo>Booking_Fee_Line__c</referenceTo>
    <relationshipLabel>Booking Fee Allocation</relationshipLabel>
    <relationshipName>Booking_Fee_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>