MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Allocation__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Booking Fee Allocation</relationshipLabel>
    <relationshipName>Booking_Fee_Allocation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>